# plover_chordle_bridge

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  dev-install.sh  setup.cfg
client/: plover-bridge.ts
plover_chordle_bridge/: bridge.py
