[metadata]
name = plover-chordle-bridge
version = 0.1.0
description = Broadcast Plover strokes to the Chordle web trainer over a localhost WebSocket
long_description = file: README.md
long_description_content_type = text/markdown
author = Ruiz Bagsic
url = https://github.com/r-uiz/plover_chordle_bridge
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin steno chordle websocket

[options]
zip_safe = True
packages = plover_chordle_bridge
install_requires =
    plover >= 4.0.0

[options.entry_points]
plover.extension =
    chordle_bridge = plover_chordle_bridge.bridge:ChordleBridge
